Add tests for adjustments